# Backend

./: .gitignore  .pre-commit-config.yaml  .pylintrc  App.py  README.md  config.env  development.env  lefthook.yml  package.json  production.env  pyproject.toml  requirements.txt  testing.env
.github/workflows/: python-app.yml
Assets/: InternalUsers.json
Config/: AppConfig.py  DevelopmentConfig.py  EnvConfig.py  Events.py  ProdConfig.py  ProductionConfig.py  TestingConfig.py  __init__.py
Constants/: Constants.py  EnvTypes.py  EnvironmentsDict.py  __init__.py
Controller/: ContactUsController.py  OpenApiController.py  __init__.py
Database/: Connection.py  ContactUsDb.py  InternalUserDB.py  __init__.py
Models/: BaseMongoModel.py  ContactUsModel.py  InternalUserModel.py  __init__.py
Models/Request/: ITULoginRequestModel.py  __init__.py
Schemas/: ContactUsRequestSchema.py  ITULoginRequestSchema.py  __init__.py
Static/CSS/: 401.css  style.css
Templates/Html/: 401.html  email.html  index.html
Tests/: App.py  TestApp.py  TestContactUs.py  TestLogin.py  TestMain.py
Utils/: Environment.py  JWTToken.py  Logger.py  Templates.py  Utils.py  __init__.py
Views/: ContactUsRouter.py  OpenApiDocRouter.py  __init__.py
